添加项目文件,微调更新

--- a/css/webStyle.css
+++ b/css/webStyle.css
@@ -191,7 +191,6 @@ body[data-theme="reg"] {
     color: gold; }
 
 .main-logo {
-  margin-bottom: -10rem;
   position: relative;
   z-index: -1; }
 
@@ -223,7 +222,7 @@ body[data-theme="reg"] {
   color: #cc9933;
   background-color: rgba(0, 0, 0, 0.25);
   height: 3rem;
-  margin-top: 4.4rem; }
+  margin-top: 3rem; }
 
 .notification-bar:before {
   content: "";
@@ -238,19 +237,23 @@ body[data-theme="reg"] {
 .segment-menu {
   width: 95%;
   margin: 1rem auto;
-  background-color: rgba(30, 30, 30, 0.8);
-  height: 5rem;
-  min-width: 300px; }
+  min-width: 300px;
+  height: 4.4rem; }
+  .segment-menu .segment-menu-inner {
+    width: 100%;
+    background-color: rgba(30, 30, 30, 0.8);
+    height: 4rem; }
   .segment-menu .segment-menu-item {
     width: 14%;
-    height: 5rem;
-    line-height: 5rem;
     float: left;
     text-align: center; }
   .segment-menu a {
     color: #5b5b5b;
     text-decoration: none;
-    white-space: nowrap; }
+    white-space: nowrap;
+    font-size: 1.6rem;
+    display: block;
+    line-height: 4rem; }
     .segment-menu a img {
       display: inline-block;
       padding: 0 .5rem;
@@ -260,10 +263,11 @@ body[data-theme="reg"] {
   .segment-menu .active {
     background-image: url(../img/ui-tab-selected-block.png);
     background-repeat: no-repeat;
-    background-size: 100% 5.7rem;
+    background-size: 100% 4.4rem;
     background-position: center top;
     color: gold;
-    height: 5.7rem; }
+    z-index: -1;
+    height: 4.4rem; }
     .segment-menu .active a {
       color: inherit; }
 
@@ -272,9 +276,8 @@ body[data-theme="reg"] {
   -webkit-box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
   -moz-box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.5);
-  margin: 2rem auto;
+  margin: 1rem auto;
   padding: 1rem;
-  width: 97%;
   height: auto; }
 
 .radius-8 {
@@ -304,6 +307,9 @@ body[data-theme="reg"] {
 
 .padding-10 {
   padding: 1rem; }
+
+.padding-20 {
+  padding: 2rem; }
 
 .margin-top-10 {
   margin-top: 1rem; }
@@ -404,23 +410,53 @@ body[data-theme="reg"] {
 
 .ui-panel-win {
   background-color: #1d1e1e;
+  margin: 0 0 1rem 0;
   -webkit-border-radius: 8px;
   -moz-border-radius: 8px;
   -o-border-radius: 8px;
   -ms-border-radius: 8px;
   border-radius: 8px;
   display: block;
-  padding: 1rem; }
+  padding: 1rem .5rem; }
   .ui-panel-win .ui-panel-title {
     color: #868686;
-    text-align: center;
     padding: 1rem 0;
-    height: auto; }
+    height: auto;
+    display: -webkit-box;
+    /* OLD - iOS 6-, Safari 3.1-6 */
+    display: -moz-box;
+    /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;
+    /* TWEENER - IE 10 */
+    display: -webkit-flex;
+    /* NEW - Chrome */
+    display: flex;
+    /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    /* Y 
+            @box-align: start      | end      | center | baseline | stretch;
+            @align-item:flex-start | flex-end | center | baseline | stretch;
+        */
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    /*
+            X 
+            @pack:   start      | end      | center | justify;
+            @content:flex-start | flex-end | center | space-between
+            | space-around
+        */
+    -webkit-box-pack: justify;
+    -moz-box-pack: justify;
+    -ms-flex-pack: justify;
+    -webkit-justify-content: space-between;
+    justify-content: space-between; }
   .ui-panel-win ul {
     color: #666666;
-    padding: 0 1.6rem;
     margin: 0;
-    list-style: none; }
+    list-style: none;
+    padding: 0; }
     .ui-panel-win ul li {
       margin-top: 1rem;
       display: -webkit-box;
@@ -453,6 +489,18 @@ body[data-theme="reg"] {
       -ms-flex-pack: justify;
       -webkit-justify-content: space-between;
       justify-content: space-between; }
+      .ui-panel-win ul li .Separator {
+        padding: 0 4px;
+        display: inline-block;
+        vertical-align: middle; }
+  .ui-panel-win ul:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: #868686;
+    -webkit-transform: scaleY(0.5);
+    transform: scaleY(0.5); }
 
 .ui-tool-bar {
   width: 100%;
@@ -1798,8 +1846,7 @@ body[data-theme="reg"] {
 
 #myForm,
 #myForm2 {
-  display: block;
-  width: 100%; }
+  display: block; }
   #myForm ul,
   #myForm2 ul {
     padding: 0 0 0 16px;
@@ -1836,7 +1883,7 @@ body[data-theme="reg"] {
       -ms-flex-pack: justify;
       -webkit-justify-content: space-between;
       justify-content: space-between;
-      min-height: 40px; }
+      padding: .25rem 0; }
       #myForm ul li label,
       #myForm2 ul li label {
         display: block; }
@@ -1858,6 +1905,11 @@ body[data-theme="reg"] {
           -o-border-radius: 6px;
           -ms-border-radius: 6px;
           border-radius: 6px; }
+
+#myForm2 {
+  width: 100%; }
+  #myForm2 li {
+    min-height: 40px; }
 
 #targetUserList {
   position: relative;
