--- a/css/webStyle.scss
+++ b/css/webStyle.scss
@@ -441,7 +441,12 @@ body[data-theme="reg"]{
 .ui-ball-10{background-image: url(../img/ball_normal_10.png);}
 .ui-ball-10.active{background-image: url(../img/ball_selected_10.png);}
 
-
+#OrderDetailView{
+  td{padding: 5px; border: solid 1px #464646;}
+  tr{
+    td:nth-child(odd){ background-color: #232325; font-weight:500;}
+  }
+}
 .ui-table{ 
     width: 100%;  color: #f49608;
 
